RESOLVED FIXED 114593
[EFL][WK2] Regression(r148274): Broke rendering in the browser
https://bugs.webkit.org/show_bug.cgi?id=114593
Summary [EFL][WK2] Regression(r148274): Broke rendering in the browser
Chris Dumez
Reported 2013-04-14 11:40:17 PDT
<http://trac.webkit.org/changeset/148274> completely broke rendering in the browser. The view stays grey and the browser is unusable. That patch defined a new "didChangeViewportAttributes" callback but forgot to hook it up in the view client. Patch is on the way.
Attachments
Patch (1.44 KB, patch)
2013-04-14 11:42 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2013-04-14 11:42:40 PDT
WebKit Commit Bot
Comment 2 2013-04-14 12:16:06 PDT
Comment on attachment 198006 [details] Patch Clearing flags on attachment: 198006 Committed r148407: <http://trac.webkit.org/changeset/148407>
WebKit Commit Bot
Comment 3 2013-04-14 12:16:10 PDT
All reviewed patches have been landed. Closing bug.
Mikhail Pozdnyakov
Comment 4 2013-04-15 01:04:16 PDT
(In reply to comment #0) > <http://trac.webkit.org/changeset/148274> completely broke rendering in the browser. The view stays grey and the browser is unusable. > > That patch defined a new "didChangeViewportAttributes" callback but forgot to hook it up in the view client. > Ahh, I lost it while rebasing :( Thanks Chris for fixing.
Note You need to log in before you can comment on or make changes to this bug.