[EFL][WK2] Regression(r148274): Broke rendering in the browser https://bugs.webkit.org/show_bug.cgi?id=114593

Reviewed by Anders Carlsson.

r148274 added a new "didChangeViewportAttributes" callback to
WKView but did not hook it up in ViewClientEfl. This patch
fixes this and makes rendering work again in the browser.

* UIProcess/efl/ViewClientEfl.cpp:
(WebKit::ViewClientEfl::ViewClientEfl):


Canonical link: https://commits.webkit.org/132973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148407 268f45cc-cd09-0410-ab3c-d52691b4dbfc